# chatfcdev

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml
.github/workflows/: desktop-ci.yml  release-desktop.yml
backend/: Cargo.toml  users.json
backend/src/: main.rs
chatfc-desktop/: Cargo.toml  tauri.conf.json
chatfc-desktop/src/: main.rs
frontend/: app.js  index.html  style.css
frontend/css/: animations.css  base.css  dm.css  emoji.css  gif.css  input.css  layout.css  lightbox.css  login.css  messages.css  responsive.css  search.css  themes.css
frontend/js/: auth.js  channels.js  constants.js  dm.js  dom.js  emoji.js  gif.js  helpers.js  messages.js  router.js  search.js  upload.js  voice.js  ws.js
frontend/tauri-dist/: app.js  index.html  style.css
frontend/tauri-dist/css/: base.css  dm.css  lightbox.css  login.css  responsive.css  staging.css  themes.css  voice.css
frontend/tauri-dist/js/: auth.js  channels.js  constants.js  dm.js  dom.js  helpers.js  messages.js  notifications.js  serverConfig.js  state.js  theme.js  upload.js  ws.js
livekit/: livekit.yaml
